# mkpl-ad-rust

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.deb  Makefile.toml  docker-compose.yml  rest_create.sh  rest_delete.sh  rest_offers.sh  rest_read.sh  rest_search.sh  rest_update.sh
.github/workflows/: build-amd64.yml  build-arm64.yml
api_common/: Cargo.toml
api_common/src/: api_error.rs  context_wrapper.rs  lib.rs  request_parser.rs  swagger_response.rs  xspan.rs
api_v1/: .openapi-generator-ignore  Cargo.toml  build.rs  files.txt
api_v1/src/: lib.rs  lib.rs_old
api_v1/templates/: client-imports.mustache  client-mod.mustache  client-operation.mustache  client-request-body-instance.mustache  context.mustache  generate-multipart-related.mustache  lib.mustache  models.mustache  server-imports.mustache  server-make-service.mustache  server-mod.mustache  server-operation.mustache  server-request-body-basic.mustache  server-request-body-multipart-form.mustache  server-request-body-multipart-related.mustache  server-response-body-instance.mustache  server-service-footer.mustache  server-service-header.mustache
api_v1_map/: Cargo.toml
api_v1_map/src/: lib.rs
api_v1_map/src/macros/: enum_converter_macros.rs  field_converter_macros.rs  id_types_macros.rs  mod.rs  model_mapper_macros.rs  response_mapper.rs
api_v1_map/src/mappers/: mod.rs
api_v1_map/src/mappers/base/: constants.rs  mkpl_ad_id.rs  mkpl_lock.rs  mod.rs  response_object_mapper.rs  response_result_mapper.rs
api_v1_map/src/mappers/create/: mod.rs  object_mapper.rs  request_mapper.rs  response_mapper.rs
api_v1_map/src/mappers/delete/: object_mapper.rs  request_mapper.rs  response_mapper.rs
api_v1_map/src/mappers/offers/: object_mapper.rs  request_mapper.rs  response_mapper.rs
api_v1_map/src/mappers/read/: mod.rs  object_mapper.rs  request_mapper.rs  response_mapper.rs
api_v1_map/src/mappers/search/: object_mapper.rs  request_mapper.rs  response_mapper.rs
api_v1_map/src/mappers/update/: object_mapper.rs  request_mapper.rs  response_mapper.rs
api_v1_map/src/mappers_priv/: mkpl_ad_request_id.rs  mkpl_ad_type.rs  mkpl_ad_visibility.rs  mkpl_lock.rs  mkpl_product_id.rs  mod.rs  string_fields.rs
api_v1_map/src/mappers_pub/: mod.rs
api_v1_map/src/mappers_pub/create/: mod.rs  object_mapper.rs  request_mapper.rs
app-hyper/: Cargo.toml  service_api_v1.rs
app-hyper/src/: main.rs  router.rs  server.rs
app-hyper/src/api/v1/: create.rs  handle_error.rs  mod.rs
app-hyper/src/api/v2/: create.rs  mod.rs
app-hyper/src/macros/: api_macros.rs  mod.rs
app-hyper/src/router/: mod.rs  root.rs  v1.rs  v2.rs
app-hyper/src/routes/: mod.rs
app-hyper/src/routes/root/: handle_error.rs  handle_root.rs  mod.rs  router.rs
app-hyper/src/routes/v1/: handle_create.rs  handle_delete.rs  handle_offers.rs  handle_read.rs  handle_search.rs  handle_update.rs  mod.rs  router.rs
app-hyper/src/routes/v2/: handle_create.rs  mod.rs  router.rs
biz-common/: Cargo.toml
biz-common/src/: lib.rs  mkpl_ad_ctx.rs
biz-common/src/models/: biz_status.rs  mkpl_ad_command.rs  mkpl_error_codes.rs  mkpl_fields.rs  mod.rs
biz-logic/: Cargo.toml
biz-logic/src/: lib.rs
build-app/: Cargo.toml_  Dockerfile  Dockerfile.custom
build-swagger/: Dockerfile  swagger-initializer.js
common/: Cargo.toml
common/src/: lib.rs  mkpl_ad.rs  mkpl_ad_filter.rs  mkpl_ad_id.rs  mkpl_ad_lock.rs  mkpl_ad_product_id.rs  mkpl_ad_request_id.rs  mkpl_ad_user_id.rs
common/src/macros/: id_type_macros.rs  mod.rs
lib-cor/: Cargo.toml
lib-cor/src/: cor_closure_step.rs  cor_context.rs  cor_error.rs  cor_step.rs  cor_struct.rs  cor_types.rs  enums.rs  exported.rs  lib.rs  lib.rs_  macros.rs
lib-cor/tests/: cor_context.rs  cor_context_test.rs  cor_macros.rs_  cor_macros_test.rs  test.rs
lib-cor/tests/handlers/: context.rs  handler_init.rs  handler_validation.rs  mod.rs
specs/: base.yaml  spec-crowdproj-ad-root.yaml  spec-crowdproj-ad-v1.yaml
stubs/: Cargo.toml
stubs/src/: lib.rs  stubs_ad.rs  stubs_ad_filter.rs
