[workspace]
resolver = "2"
members = [
    "common",
    "biz-common",
    "stubs",
    "api_v1",
    "api_v1_map",
    "app-hyper",
]

[workspace.dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
hyper = { version = "0.14", features = ["full"]}

