[workspace]
resolver = "2"
members = ["common", "biz-common", "stubs", "api_v1", "api_v1_map", "app-hyper"]

[workspace.dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# serde_derive = "1.0"
hyper = { version = "1.6.0", features = ["full"] }
tokio = { version = "1.45", features = ["full"] }
log = "0.4"
