[workspace]
resolver = "2"
members = [
    "api_common",
    "common",
    "biz-common",
    "stubs",
    "api_v1",
    "api_v1_map",
    "app-hyper",
]

[workspace.dependencies]
async-trait = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# serde_derive = "1.0"
hyper = { version = "1.6.0", features = ["full"] }
tokio = { version = "1.45", features = ["full"] }
log = "0.4"
futures = "0.3"
mime = "0.3.17"
multipart = "0.18"
bytes = "1.10"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
url = { version = "2.5" }
