[package]
name = "api_common"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures.workspace = true
log.workspace = true
mime.workspace = true
multipart.workspace = true
tokio.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
hyper.workspace = true
hyper-util.workspace = true
url.workspace = true
http-body-util.workspace = true
thiserror = "2.0"
