[package]
name = "api_v1"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["rlib"]
path = ".generated/src/lib.rs"

[features]
default = ["server"]
server = [
   "serde_ignored",
   "hyper",
   "regex",
   "percent-encoding",
   "url",
   "lazy_static",
]
conversion = [
   "frunk",
   "frunk_derives",
   "frunk_core",
   "frunk-enum-core",
   "frunk-enum-derive",
]


[dependencies]
# Common
api_common = { path = "../api_common" }
async-trait.workspace = true
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
log.workspace = true
mime.workspace = true
tokio.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
validator = { version = "0.20", features = ["derive"] }

# Common between server and client features
hyper = { workspace = true, optional = true }
http-body-util.workspace = true
hyper-util.workspace = true
serde_ignored = { version = "0.1.1", optional = true }
url = { workspace = true, optional = true }

# Client-specific

# Server, and client callback-specific
lazy_static = { version = "1.4", optional = true }
percent-encoding = { version = "2.1.0", optional = true }
regex = { version = "1.3", optional = true }

# CLI-specific
anyhow = { version = "1", optional = true }
clap-verbosity-flag = { version = "3.0", optional = true }
simple_logger = { version = "5.0", features = ["stderr"], optional = true }
structopt = { version = "0.3", optional = true }

# Conversion
frunk = { version = "0.4.0", optional = true }
frunk_derives = { version = "0.4", optional = true }
frunk_core = { version = "0.4", optional = true }
frunk-enum-derive = { version = "0.3", optional = true }
frunk-enum-core = { version = "0.3", optional = true }

# Bearer authentication
[dev-dependencies]
clap = "4.5"
env_logger = "0.11"
tokio.workspace = true
native-tls = "0.2"

[build-dependencies]
tokio.workspace = true
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["stream"] }
