[package]
name = "api_v1_map"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]
common = { path = "../common" }
biz_common = { path = "../biz-common" }
api_v1 = { path = "../api_v1" }
cor = { path = "../lib-cor" }
async-trait.workspace = true
once_cell = "1"

[dev-dependencies]
stubs = { path = "../stubs" }
