[package]
name = "app-hyper"
description = "Test server for CrowdProj-Ads project written in Rust"
authors = ["Sergey Okatov <sokatov@gmail.com>"]
version = "0.1.0"
edition = "2021"

[features]
# default = ["client", "server"]
default = ["server"]
# client = ["hyper", "hyper-openssl", "hyper-tls", "native-tls", "openssl", "url"]
server = [
    "serde_ignored",
    "hyper",
    "regex",
    "percent-encoding",
    "url",
    "lazy_static",
]

[dependencies]
api_v1 = { path = "../api_v1" }
tokio = { version = "1.14", features = ["full"] }
swagger-ui = { version = "0.1" }

clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11.6"
async-trait = "0.1.24"
futures = "0.3"
hyper = {workspace = true, optional = true}
swagger = { version = "6.1", features = ["serdejson", "server", "tls", "tcp"] }
log = "0.4.0"
url = { version = "2.1", optional = true }
regex = { version = "1.3", optional = true }
percent-encoding = { version = "2.1.0", optional = true }
lazy_static = { version = "1.4", optional = true }
native-tls = { version = "0.2", optional = true }
hyper-tls = { version = "0.6", optional = true }
# hyper-openssl = { version = "0.10", optional = true }
jsonwebtoken = { version = "9.3.0", optional = false }
openssl = { version = "0.10" }
hyper-openssl = { version = "0.10.2" }
tokio-openssl = { version = "0.6" }
# openssl = {version = "0.10", features = ["vendored"]}

serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
serde_ignored = { version = "0.1.1", optional = true }
