[package]
name = "app-hyper"
description = "Test server for CrowdProj-Ads project written in Rust"
authors = ["Sergey Okatov <sokatov@gmail.com>"]
version = "0.1.0"
edition = "2021"

[features]
# default = ["client", "server"]
# default = ["server"]
# client = ["hyper", "hyper-openssl", "hyper-tls", "native-tls", "openssl", "url"]
# server = [
#     "serde_ignored",
#     # "hyper",
#     "regex",
#     "percent-encoding",
#     "url",
#     "lazy_static",
# ]

[dependencies]
api_v1 = { path = "../api_v1" }
api_v1_map = { path = "../api_v1_map" }
biz_common = { path = "../biz-common" }
stubs = { path = "../stubs" }

hyper = { workspace = true }
tokio = { workspace = true }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.10"
log = "0.4"
env_logger = "0.11"


# tokio = { version = "1.45.0", features = ["full"] }
# swagger-ui = { version = "0.1" }

# clap = { version = "4.5.38", features = ["derive"] }
# env_logger = "0.11.8"
# async-trait = "0.1.88"
# futures = "0.3"
# hyper = { version = "1.6", features = ["full"] }
# swagger = { version = "6.5.0", features = [
#     "serdejson",
#     "server",
#     "tls",
#     "tcp",
# ] }
# log = "0.4.27"
# url = { version = "2.5", optional = true }
# regex = { version = "1.11", optional = true }
# percent-encoding = { version = "2.1", optional = true }
# lazy_static = { version = "1.5", optional = true }
# native-tls = { version = "0.2", optional = true }
# hyper-tls = { version = "0.6", optional = true }
# # hyper-openssl = { version = "0.10", optional = true }
# jsonwebtoken = { version = "9.3.0", optional = false }
# openssl = { version = "0.10" }
# hyper-openssl = { version = "0.10" }
# tokio-openssl = { version = "0.6" }
# # openssl = {version = "0.10", features = ["vendored"]}

# serde.workspace = true
# serde_json.workspace = true
# serde_derive.workspace = true
# serde_ignored = { version = "0.1", optional = true }
